[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wopvault"
dynamic = ["version"]
description = "Words of Power Vault"
readme = "README.md"
license = "MIT"
authors = [
    { name = "texnoforge", email = "voice@texnoforge.dev" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "fastapi",
    "omegaconf",
    "platformdirs",
    "uvicorn",
]

[project.scripts]
wopvault = "wopvault.cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/texnoforge/wopvault/issues"
Homepage = "https://github.com/texnoforge/wopvault/"

[tool.hatch.version]
path = "wopvault/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/wopvault",
]

