[metadata]
name = wopvault
author = texnoforge
author_email = voice@texnoforge.dev
description = Words of Power Vault
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/texnoforge/wopvault/
project_urls =
    Bug Tracker = https://github.com/texnoforge/wopvault/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
install_requires =
    click
    fastapi
    uvicorn

[options.entry_points]
console_scripts =
    wopvault = wopvault.cli:main
